--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "doctrine/dbal": "^2.10",
         "hyperf/consul": "^2.0",
         "hyperf/crontab": "^2.0",
-        "zircote/swagger-php": "^3.1"
+        "zircote/swagger-php": "^3.1",
+        "hyperf/websocket-server": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
