--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "hyperf/consul": "^2.0",
         "hyperf/crontab": "^2.0",
         "zircote/swagger-php": "^3.1",
-        "hyperf/websocket-server": "^2.0"
+        "hyperf/websocket-server": "^2.0",
+        "hyperf/task": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
