--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     volumes:
       - ".:/opt/www"
     # 开发模式（热重载）， 有时候不好用。建议手动重启
-    # command: "php -S 0.0.0.0:80"
-    command: sh -c "composer install && php /opt/www/watch"
+    command: "php -S 0.0.0.0:80"
+    # command: sh -c "composer install && php /opt/www/watch"
 
   mysql:
     image: mysql:8.0.19
@@ -37,15 +37,14 @@ services:
       net.core.somaxconn: 65535
 
   mongo:
-    image: mongo
-    volumes:
-      - "./runtime/docker/data/mongo:/data/db"
+    image: mongo:4.4.2
     ports:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: 123456
-    tty: true
+    volumes:
+      - "./runtime/docker/data/mongo:/data/db"
 
   consul:
     image: consul:1.8.3
