[fixed] docker-compose mongodb问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: 123456
     volumes:
-      - "./runtime/docker/data/mongo:/data/db"
+      - "mongo-vol:/data/db"
 
   consul:
     image: consul:1.8.3
@@ -59,3 +59,7 @@ services:
       - 9999:8080
     volumes: 
       - "./doc:/usr/share/nginx/html/doc"
+
+volumes: 
+  mongo-vol:
+    driver: local
