[add] 完成用户登录注册，以及一些其他的初始化

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "hyperf/crontab": "^2.0",
         "zircote/swagger-php": "^3.1",
         "hyperf/websocket-server": "^2.0",
-        "hyperf/task": "^2.0"
+        "hyperf/task": "^2.0",
+        "hyperf/snowflake": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
